# DLLi

./: CMakeLists.txt  README.md  crypto.cpp  crypto.h  etw.cpp  etw.h  http.h  injector.cpp  loader.cpp  ntdll.cpp  xor_encode.py
DLLi/: README.md  embedded.cpp  http.cpp  injector.h  loader.h  main.cpp  ntdll.h  remote.cpp  remote.h
payload/: CMakeLists.txt  payload.cpp
